-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 Alpha
-
None
-
0609558407114579cd7a10029e8f3c6f82122082
Try RTA test "Canvas3D_conformance_incorrect_context_object_behaviour" to reproduce.
| For Gerrit Dashboard: QTBUG-45695 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 111187,2 | Add checks to ensure objects are from correct context. | 5.5 | qt/qtcanvas3d | Status: MERGED | +2 | 0 |