Add checks to ensure objects are from correct context.

Change-Id: Ibbaffb0567cbc66d39e9a6932f2fefea93f6aa96
Task-number: QTBUG-45695
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>